# Proy_Ing_Software

./: .gitignore  README.md  metricas_proyecto_anexo.csv  pyproject.toml
app/: db2.sqlite3
app/academico/: admin.py  apps.py  exceptions.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
app/academico/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comision_options_alter_materia_options_and_more.py  0004_comision_docente.py  0005_rename_horario_comision_horario_fin_and_more.py  0006_estadosalumno_alumno.py  0007_alter_alumno_promedio.py  0008_inscripcionesalumnoscomisiones.py  0009_alter_inscripcionesalumnoscomisiones_options_and_more.py  0010_alter_inscripcionesalumnoscomisiones_creado.py  0011_alter_inscripcionesalumnoscomisiones_creado.py  0012_alter_inscripcionesalumnoscomisiones_creado.py  0013_alter_estadosalumno_options_and_more.py  0014_alter_inscripcionesalumnoscomisiones_estado_inscripcion_and_more.py  0015_comision_estado.py  0016_remove_materia_creditos.py  0017_asistencia.py  0019_alter_comision_options_and_more.py  (+15 more)
app/administracion/: admin.py  models.py  reportes_utils.py  urls.py  utils.py  views.py
app/institucional/: admin.py  apps.py  auditoria.py  context_processors.py  digitos_verificadores.py  forms.py  models.py  signals.py  urls.py  views.py
app/main/: admin.py  apps.py  forms.py  services.py  settings.py  urls.py  utils.py  views.py
app/templates/: base.html  base_login.html
scripts/: check_teacher_filter.py  test_exam_logic.py  test_exam_sync.py  test_grade_update_logic.py  test_regularizacion.py
(+79 files in other folders)
