[project]
name = "sist-adm"
version = "0.1.0"
description = "Proyecto de gestión administrativa y educativo para la matería ingeniería de sofware - UAI 2025"
authors = [
    {name = "JulianDeco",email = "juliandecoppet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
