[project]
name = "sist-adm"
version = "0.1.0"
description = "Proyecto de gestión administrativa y educativo para la matería ingeniería de sofware - UAI 2025"
authors = [
    {name = "JulianDeco",email = "juliandecoppet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "django-admin-logs (>=1.4.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "weasyprint (>=66.0,<67.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
